--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
-Flask==1.1.2
-Flask-SQLAlchemy==2.4.4
-python-dotenv==0.15.0
-SQLAlchemy==1.3.22
+blinker==1.8.2
+click==8.1.7
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+importlib_metadata==7.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+python-dotenv==1.0.1
+SQLAlchemy==2.0.30
+typing_extensions==4.12.2
+Werkzeug==3.0.3
+zipp==3.19.2
